// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`width renders 0 1`] = `
Array [
  .c0 {
  width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`width renders function 1`] = `
Array [
  .c0 {
  width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  width: has;
}

<div
    className="c0"
  />,
  .c0 {
  width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`width renders invalid theme path 1`] = `
Array [
  .c0 {
  width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`width renders negative number 1`] = `
Array [
  .c0 {
  width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  width: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  width: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`width renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  width: July;
}

@media screen and (min-width:November) {
  .c0 {
    width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  width: July;
}

@media screen and (min-width:November) {
  .c0 {
    width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    width: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`width renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`width renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  width: July;
}

@media May {
  .c0 {
    width: August;
  }
}

@media April {
  .c0 {
    width: September;
  }
}

@media January {
  .c0 {
    width: November;
  }
}

@media April {
  .c0 {
    width: August;
  }
}

@media June {
  .c0 {
    width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  width: July;
}

@media May {
  .c0 {
    width: August;
  }
}

@media April {
  .c0 {
    width: September;
  }
}

@media January {
  .c0 {
    width: November;
  }
}

@media April {
  .c0 {
    width: August;
  }
}

@media June {
  .c0 {
    width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    width: November;
  }
}

@media April {
  .c0 {
    width: January;
  }
}

@media January {
  .c0 {
    width: December;
  }
}

@media April {
  .c0 {
    width: April;
  }
}

@media June {
  .c0 {
    width: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    width: November;
  }
}

@media April {
  .c0 {
    width: January;
  }
}

@media January {
  .c0 {
    width: December;
  }
}

@media April {
  .c0 {
    width: April;
  }
}

@media June {
  .c0 {
    width: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`width renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    width: July;
  }
}

@media April {
  .c0 {
    width: August;
  }
}

@media January {
  .c0 {
    width: September;
  }
}

@media April {
  .c0 {
    width: November;
  }
}

@media June {
  .c0 {
    width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    width: July;
  }
}

@media April {
  .c0 {
    width: August;
  }
}

@media January {
  .c0 {
    width: September;
  }
}

@media April {
  .c0 {
    width: November;
  }
}

@media June {
  .c0 {
    width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    width: January;
  }
}

@media April {
  .c0 {
    width: December;
  }
}

@media January {
  .c0 {
    width: April;
  }
}

@media April {
  .c0 {
    width: May;
  }
}

@media June {
  .c0 {
    width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    width: January;
  }
}

@media April {
  .c0 {
    width: December;
  }
}

@media January {
  .c0 {
    width: April;
  }
}

@media April {
  .c0 {
    width: May;
  }
}

@media June {
  .c0 {
    width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`width renders postitive number 1`] = `
Array [
  .c0 {
  width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  width: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  width: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`width renders string 1`] = `
Array [
  .c0 {
  width: July;
}

<div
    className="c0"
  />,
  .c0 {
  width: July;
}

<div
    className="c0"
  />,
  .c0 {
  width: June;
}

<div
    className="c0"
  />,
  .c0 {
  width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`width renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`width renders valid theme path 1`] = `
Array [
  .c0 {
  width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
